--- a/parsing/pyproject.toml
+++ b/parsing/pyproject.toml
@@ -6,5 +6,9 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "duckdb>=1.3.1",
+    "ipykernel>=6.29.5",
     "pandas>=2.3.0",
+    "pip>=25.1.1",
+    "polars>=1.31.0",
+    "pyarrow>=20.0.0",
 ]
